--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -289,8 +289,7 @@ Break</span><br>
  valign="top">Mar 27 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 28<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Review</span><br>
-      </div>
+      <div style="text-align: center;">Review, Lecture 13 </div>
       <div style="text-align: center;">Due:
 Project 2<br>
       </div>
@@ -298,18 +297,24 @@ Project 2<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 29 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 30 </td>
+ valign="top">Mar 30<br>
+      <div style="text-align: center;">Lecture 13 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 31 </td>
       <td
- style="background-color: rgb(0, 0, 0); vertical-align: middle;">12:
-Sets and Maps<br>
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">13:
+Graphs<br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 3</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 4</td>
+ valign="top">Apr 4<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+13 (from slide 33)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 5</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 6</td>
