--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -250,14 +250,15 @@ Break</span><br>
  valign="top">Mar 27 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 28<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-M2 (</span><span style="font-style: italic;">from slide 20)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture M2<span
+ style="font-style: italic;"></span> </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 29 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 30<br>
+      <div style="text-align: center;">Lectures M2, D1<span
+ style="font-style: italic;"></span> </div>
       <div style="text-align: center;">Due:
 Lab 2<br>
       </div>
@@ -268,7 +269,11 @@ Lab 2<br>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 3</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 4</td>
+ valign="top">Apr 4<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+D1 (</span><span style="font-style: italic;">from slide 16)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 5</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 6</td>
