--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -311,13 +311,13 @@ Graphs<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 3</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 4<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-13 (from slide 33)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture 13 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 5</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 6</td>
+ valign="top">Apr 6<br>
+      <div style="text-align: center;">Lecture 13, Review </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 7</td>
       <td
  style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
@@ -326,24 +326,35 @@ Graphs<br>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 10</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 11</td>
+ valign="top">Apr 11<br>
+      <div style="text-align: center;">Lecture 12, Review </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 12</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 13</td>
+ valign="top">Apr 13<br>
+      <div style="text-align: center;">Lectures 12 and 14 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 14</td>
       <td
- style="background-color: rgb(0, 0, 0); vertical-align: middle;"><br>
+ style="background-color: rgb(0, 0, 0); vertical-align: middle;">12:
+Sets and Maps<br>
+14: Hashing and Hash Tables<br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 17</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 18</td>
+ valign="top">Apr 18<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+14 (from slide 13)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 19</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 20</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 21</td>
-      <td style="vertical-align: middle;"><br>
+      <td style="vertical-align: middle;">15: Sorting<br>
+16: Advanced Design and Analysis Techniques<br>
       </td>
     </tr>
     <tr>
