--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -270,28 +270,41 @@ Lab 2<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 3</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 4<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-D1 (</span><span style="font-style: italic;">from slide 16)</span><br>
+      <div style="text-align: center;">Lecture D1<span
+ style="font-style: italic;"></span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 5</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 6</td>
+ valign="top">Apr 6<br>
+      <div style="text-align: center;">Lectures D1, D2<span
+ style="font-style: italic;"></span> </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 7</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 10</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 11</td>
+ valign="top">Apr 11<br>
+      <div style="text-align: center;">Lectures D2, F1<span
+ style="font-style: italic;"></span> </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 12</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 13</td>
+ valign="top">Apr 13<br>
+      <div style="text-align: center;">Lectures F1, F2<span
+ style="font-style: italic;"></span> </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 14</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 17</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 18</td>
+ valign="top">Apr 18<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+F2 (</span><span style="font-style: italic;">from slide 29), X1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 19</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 20</td>
@@ -304,8 +317,8 @@ D1 (</span><span style="font-style: italic;">from slide 16)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 26</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 27<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 3</span><br>
+      <div style="text-align: center;">Due:
+Lab 3<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 28<br>
