--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -299,15 +299,27 @@ Lab 2<br>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 17</td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 18<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-F2 (</span><span style="font-style: italic;">from slide 29), X1</span><br>
+      <td style="background-color: rgb(102, 255, 255);"
+ bgcolor="#c0c0c0" valign="top"><span style="color: rgb(0, 0, 0);">Apr
+18</span><br style="color: rgb(0, 0, 0);">
+      <div style="text-align: center;"><span
+ style="color: rgb(0, 0, 0);">Lecture X2/Chapter 18</span> <a
+ href="https://codex.cs.yale.edu/avi/os-book/OS10/slide-dir/PPTX-dir/ch18.pptx">notes</a><br>
+      <span style="color: rgb(0, 0, 0);">Online: <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/lecture18a.mp4">vid1</a>,
+      <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/lecture18b.mp4">vid2</a>,
+      <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/lecture18c.mp4">vid3</a></span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 19</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 20</td>
+ valign="top">Apr 20<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+F2 (</span><span style="font-style: italic;">from slide 29), X1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 21</td>
     </tr>
     <tr>
