--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -376,16 +376,16 @@ Project 3<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May 1</td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">May 2</td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">May
+      <td style="background-color: rgb(0, 0, 0);" valign="top">May
 3<br>
-      <div
- style="text-align: center; background-color: rgb(51, 102, 255);">Final
+      </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">May 4<br>
+      <div style="text-align: center;">Final
 Exam, 2:30 PM<br>
 (Lectures 9 through ?)<br>
       </div>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">May 4</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May 5</td>
       <td style="vertical-align: top;"><br>
       </td>
