--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -345,22 +345,26 @@ Sets and Maps<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 17</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 18<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-14 (from slide 13)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures 14 and 15 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 19</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 20</td>
+ valign="top">Apr 20<br>
+      <div style="text-align: center;">Lecture 15 and Thrust<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 21</td>
       <td style="vertical-align: middle;">15: Sorting<br>
-16: Advanced Design and Analysis Techniques<br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 24</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 25</td>
+ valign="top">Apr 25<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+16 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 26</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 27<br>
@@ -369,8 +373,8 @@ Project 3<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 28</td>
-      <td style="vertical-align: middle;"><br>
-      </td>
+      <td style="vertical-align: middle;">16: Advanced Design and
+Analysis Techniques </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May 1</td>
