--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//w3c//dtd html 4.0 transitional//en">
+!DOCTYPE html PUBLIC "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
   <meta http-equiv="Content-Type"
@@ -316,16 +316,19 @@ Lab 2<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 19</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 20<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-F2 (</span><span style="font-style: italic;">from slide 29), X1</span><br>
-      </div>
+      <div style="text-align: center;">Lectures F2, X1<span
+ style="font-style: italic;"></span> </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 21</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 24</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 25</td>
+ valign="top">Apr 25<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+X1 (</span><span style="font-style: italic;">from slide 20)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 26</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 27<br>
