--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -332,9 +332,6 @@ X1 (</span><span style="font-style: italic;">from slide 20)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 26</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 27<br>
-      <div style="text-align: center;">Due:
-Lab 3<br>
-      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr 28<br>
       <div style="text-align: center;"><span style="font-style: italic;"></span><br>
@@ -349,6 +346,8 @@ Lab 3<br>
  style="text-align: center; background-color: rgb(51, 102, 255);">Final
 Exam, 12:15 PM<br>
 (Lectures P4, P5; Units M, D, F, X)<br>
+Due (by noon):
+Lab 3<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May 3</td>
