Update and rename index.html.html to index.html

--- a/teaching/cs426/index.html
+++ b/teaching/cs426/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta content="text/html; charset=ISO-8859-1"
  http-equiv="content-type">
-  <title>3460:4/526 Under Construction</title>
+  <title>CPSC 4/526 Under Construction</title>
 </head>
 <body>
-<h1>3460:4/526 Operating Systems, Spring 2022</h1>
+<h1>CPSC 4/526 Operating Systems, Fall 2023</h1>
 <h1>Under construction, check back later</h1>
 <script type="text/javascript">
 today = new Date();
-var dateSecond = new Date('January 10, 22 00:08:00');
+var dateSecond = new Date('August 28, 23 00:08:00');
 var timeDiff = Math.abs(dateSecond.getTime() - today.getTime());
 var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24));
-document.write("<h1>Only " + diffDays + " days left until start of spring term (1/10/2022).</h1>");
+document.write("<h1>Only " + diffDays + " days left until start of fall term (8/28/2023).</h1>");
 </script>
 </body>
 </html>
