--- a/teaching/index.html
+++ b/teaching/index.html
@@ -27,13 +27,10 @@
 <h2>Teaching Schedule<br>
 </h2>
 <ul>
-  <li><a href="cs316/index.html">CPSC 316 - Data Structures (Spring '23)</a><br>
+  <li><a href="cs316/index.html">CPSC 316 - Data Structures (Fall '23)</a><br>
   </li>
   <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Fall
-'22 and Spring '23)</a></li>
-  <li>CPSC 677 - Parallel Processing (Fall
-'22)<br>
-  </li>
+'23)</a></li>
 </ul>
 <h2>Previous Courses</h2>
 <ul>
@@ -56,6 +53,8 @@ Science<br>
   <li>3460:635 - Advanced Algorithms</li>
   <li>3460:641 - Optimizations for Parallel
 Compilers</li>
+  <li>CPSC 677 - Parallel Processing<br>
+  </li>
 </ul>
 <h2>Obsolete Courses</h2>
 <ul>
