--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -25,55 +25,44 @@ AND PROGRAMS <br>
 &nbsp;&nbsp;&nbsp; Programming and the Linux<br>
 &nbsp;&nbsp;&nbsp; Environment<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project0/lab0%20linux%20and%20makefiles.pdf" target="_top">Description</a>, <a
- href="../project0/makefile">makefile</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project0/hello.C">helloC</a>,
-<a href="../project0/hello.h">helloH</a>, <a href="../project0/main.C">mainC</a><br>
+ href="project0/lab0%20linux%20and%20makefiles.pdf">Description</a>, <a
+ href="project0/makefile">makefile</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="project0/hello.C">helloC</a>,
+<a href="project0/hello.h">helloH</a>, <a href="project0/main.C">mainC</a><br>
 <br>
-&nbsp;&nbsp;&nbsp; <a href="../analysis%20tools%20hw.pdf" target="_top">Analysis Tools
+&nbsp;&nbsp;&nbsp; <a href="analysis%20tools%20hw.pdf" target="_top">Analysis
+Tools
 HW</a><br>
-&nbsp;&nbsp;&nbsp; Due in-class January 24<br>
+&nbsp;&nbsp;&nbsp; Due in-class TBD<br>
 <br>
 &nbsp;&nbsp;&nbsp; Project 1 - Palindromes<br>
 &nbsp;&nbsp;&nbsp; Due February 16<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project1/proj1%20palindromes.pdf" target="_top">Description</a>, <a
- href="../project1/makefile">makefile</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project1/PalindromeI.hpp">PalindromeI</a>, <a
- href="../project1/PalindromeR.hpp">PalindromeR</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project1/test_palindrome.cpp">test_palindrome</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description,
+makefile,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PalindromeI, PalindromeR,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; test_palindrome<br>
 <br>
-&nbsp;&nbsp;&nbsp; <a href="../heap%20hw.pdf" target="_top">Heaps HW</a><br>
-&nbsp;&nbsp;&nbsp; Due in-class March 2<br>
+&nbsp;&nbsp;&nbsp; Heaps HW<br>
+&nbsp;&nbsp;&nbsp; Due in-class TBD<br>
 <br>
 &nbsp;&nbsp;&nbsp; Project 2 - Huffman code trees<br>
-&nbsp;&nbsp;&nbsp; Due March 28<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project2/proj2%20huffman%20codes.pdf" target="_top">Description</a>, <a
- href="../project2/makefile">makefile</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/Heap.hpp">Heap</a>,
-<a href="../project2/HNode.hpp">HNode</a>, <a href="../project2/Huffman.hpp">Huffman</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project2/test_huffman.cpp">test_huffman</a><br>
+&nbsp;&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, makefile,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Heap,
+HNode, Huffman,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; test_huffman<br>
 &nbsp;&nbsp;&nbsp; Incomplete files:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/HNode.cpp">HNode</a>,
-<a href="../project2/Huffman.cpp">Huffman</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HNode,
+Huffman<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"><br>
 &nbsp;&nbsp;&nbsp; Project 3 - Not Quite MapQuest<br>
-&nbsp;&nbsp;&nbsp; Due April 27<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project3/proj3%20nqmq.pdf" target="_top">Description</a>, <a
- href="../project3/makefile">makefile</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project3/Digraph.hpp">Digraph</a>, <a href="../project3/nqmq.dat">data
-file</a>, <a href="../project3/nqmqBig.dat">big data file</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project3/test_dijkstra.cpp">test_dijkstra</a><br>
+&nbsp;&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, makefile,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Digraph, data
+file, big data file,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; test_dijkstra<br>
 &nbsp;&nbsp;&nbsp; Incomplete files:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project3/Digraph.cpp">Digraph</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Digraph<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
