--- a/teaching/cs316/resources.html
+++ b/teaching/cs316/resources.html
@@ -7,7 +7,7 @@
 </head>
 <body style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
  alink="#ccffff" link="#33ccff" vlink="#cc66cc">
-<h1>CPSC 316 RESOURCE PAGE</h1>
+<h1>CPSC 316/501 RESOURCE PAGE</h1>
 <h2>LIBRARY</h2>
 <ul>
   <li><span style="font-weight: bold;">Textbook 1 (official): </span><span
@@ -53,82 +53,89 @@ Read: Weisfeld
 (4th Ed.) Chapter 10.</td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">02: Review: Linked Lists<br>
+      <td style="vertical-align: top;">02: Derived Classes and
+Inheritance<br>
+      </td>
+      <td style="vertical-align: top;">Read: Main/Savitch Ch. 14.<br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">03: Review: Linked Lists<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Chs. 5 - 6.<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">03: Analysis of Algorithms<br>
+      <td style="vertical-align: top;">04: Analysis of Algorithms<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Ch. 1, Apdx.
 B. </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">04: Review: Stacks<br>
+      <td style="vertical-align: top;">05: Review: Stacks<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Ch. 7. </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">05: Review: Queues<br>
+      <td style="vertical-align: top;">06: Review: Queues<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Ch. 8.</td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">06: Review: Searching and
+      <td style="vertical-align: top;">07: Review: Searching and
 Sorting Arrays</td>
       <td style="vertical-align: top;">Read: Main/Savitch Secs. 12.1,
 13.1, 13.2 (part).</td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">07: Review: Recursion<br>
+      <td style="vertical-align: top;">08: Review: Recursion<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Ch. 9. </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">08: Trees<br>
+      <td style="vertical-align: top;">09: Trees<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Ch. 10. </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">09: Heaps<br>
+      <td style="vertical-align: top;">10: Heaps<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Secs. 11.1,
 11.2, 11.4, 13.3.</td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">10: Priority Queues<br>
+      <td style="vertical-align: top;">11: Priority Queues<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Secs. 11.1,
 11.2.</td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11: Balanced Trees<br>
+      <td style="vertical-align: top;">12: Balanced Trees<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Secs. 11.3,
 11.4. </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">12: Sets and Maps<br>
+      <td style="vertical-align: top;">13: Sets and Maps<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Secs. 3.4,
 11.5.<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">13: Graphs<br>
+      <td style="vertical-align: top;">14: Graphs<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Ch. 15.</td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">14: Hashing and Hash Tables<br>
+      <td style="vertical-align: top;">15: Hashing and Hash Tables<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Secs. 12.2 -
 12.5<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">15: Sorting<br>
+      <td style="vertical-align: top;">16: Sorting<br>
       </td>
       <td style="vertical-align: top;">Read: Main/Savitch Secs. 13.2
 (part) - 13.4<br>
