--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -19,18 +19,21 @@ font-family:Verdana
  vlink="#fcbf43">
 <b><font color="#868cde" face="Verdana" size="2">CPSC 4/526<br>
 HOMEWORK
-AND PROGRAMS<br>
-&nbsp;&nbsp;&nbsp; Lab 1, due February 28.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="../labs/lab 1 linux shell.pdf" target="_top">Description</a>
-	, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
-&nbsp;&nbsp;&nbsp; Lab 2, due March 30.&nbsp;
-	<a href="../labs/lab 2 pthreads and sems.pdf" target="_top">Description</a>.<br>
-&nbsp;&nbsp;&nbsp; Lab 3, due April 27.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/lab 3 simple file system.pdf" target="_top">Description</a>,
-	<a href="../labs/lab3/floppya.img">disk image</a>,<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/filesys.c">seed
-	file</a>.<br>
-</font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
+AND PROGRAMS <br>
+<br>
+&nbsp;&nbsp; Lab 1 - A Simple Linux Shell<br>
+&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, seed file<br>
+<br>
+&nbsp;&nbsp; Lab 2 -<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
+&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description<br>
+<br>
+&nbsp;&nbsp; Lab 3 - A Simple File System<br>
+&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp; coming soon.<br>
+</font></b><b><br>
+</b>
 </body>
 </html>
