--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -49,7 +49,9 @@
       <td style="background-color: rgb(0, 0, 0);" valign="top">Aug
 30</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Aug
-31</td>
+31<br>
+      <div style="text-align: center;">Lectures 1, 2 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 1</td>
       <td
@@ -66,15 +68,19 @@ Object-Oriented Software Development<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 5<br>
+      <div style="text-align: center;"> Lecture 2 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 6</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-7</td>
+7<br>
+      <div style="text-align: center;">Lectures 2, 3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 8</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">3:
+Review: Linked Lists<br>
       </td>
     </tr>
     <tr>
@@ -85,15 +91,23 @@ Last drop day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-12</td>
+12<br>
+      <div style="text-align: center;"> Lecture 3 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-14</td>
+14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+4 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 15</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">4:
+Algorithm Analysis<br>
+5: Review: Stacks<br>
       </td>
     </tr>
     <tr>
