--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -45,7 +45,9 @@
       <td style="background-color: rgb(0, 0, 0);" valign="top">Aug
 30</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Aug
-31</td>
+31<br>
+      <div style="text-align: center;">Lecture O1 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 1</td>
     </tr>
@@ -57,11 +59,14 @@
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 5<br>
+      <div style="text-align: center;">Lecture O2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 6</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-7</td>
+7<br>
+      <div style="text-align: center;">Lectures O3, O4 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 8</td>
     </tr>
@@ -73,11 +78,17 @@ Last drop day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-12</td>
+12<br>
+      <div style="text-align: center;">Lectures O4, O5 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-14</td>
+14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O5 (from slide 9)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 15</td>
     </tr>
@@ -270,4 +281,3 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
-
